"""initial schema

Revision ID: 366eef91d5b9
Revises: 
Create Date: 2026-04-17 07:28:13.323031

"""
from alembic import op
import sqlalchemy as sa


# revision identifiers, used by Alembic.
revision = '366eef91d5b9'
down_revision = None
branch_labels = None
depends_on = None


def upgrade():
    # ### commands auto generated by Alembic - please adjust! ###
    op.create_table('users',
    sa.Column('id', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('username', sa.String(length=50), nullable=False),
    sa.Column('password_hash', sa.String(length=128), nullable=False),
    sa.Column('role', sa.Enum('admin', 'teacher', 'counselor', 'student'), nullable=False),
    sa.Column('real_name', sa.String(length=50), nullable=False),
    sa.Column('email', sa.String(length=100), nullable=True),
    sa.Column('is_active', sa.Boolean(), nullable=False),
    sa.Column('created_at', sa.DateTime(), nullable=True),
    sa.Column('updated_at', sa.DateTime(), nullable=True),
    sa.PrimaryKeyConstraint('id')
    )
    with op.batch_alter_table('users', schema=None) as batch_op:
        batch_op.create_index(batch_op.f('ix_users_username'), ['username'], unique=True)

    op.create_table('courses',
    sa.Column('id', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('course_name', sa.String(length=100), nullable=False),
    sa.Column('course_code', sa.String(length=20), nullable=True),
    sa.Column('teacher_id', sa.Integer(), nullable=False),
    sa.Column('classroom', sa.String(length=50), nullable=True),
    sa.Column('schedule', sa.String(length=200), nullable=True),
    sa.Column('created_at', sa.DateTime(), nullable=True),
    sa.ForeignKeyConstraint(['teacher_id'], ['users.id'], ),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('course_code')
    )
    with op.batch_alter_table('courses', schema=None) as batch_op:
        batch_op.create_index(batch_op.f('ix_courses_teacher_id'), ['teacher_id'], unique=False)

    op.create_table('students',
    sa.Column('id', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('student_id', sa.String(length=20), nullable=False),
    sa.Column('name', sa.String(length=50), nullable=False),
    sa.Column('class_name', sa.String(length=50), nullable=False),
    sa.Column('department', sa.String(length=100), nullable=True),
    sa.Column('user_id', sa.Integer(), nullable=True),
    sa.Column('face_registered', sa.Boolean(), nullable=True),
    sa.Column('face_count', sa.Integer(), nullable=True),
    sa.Column('created_at', sa.DateTime(), nullable=True),
    sa.ForeignKeyConstraint(['user_id'], ['users.id'], ),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('student_id')
    )
    with op.batch_alter_table('students', schema=None) as batch_op:
        batch_op.create_index(batch_op.f('ix_students_class_name'), ['class_name'], unique=False)

    op.create_table('attendance_tasks',
    sa.Column('id', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('course_id', sa.Integer(), nullable=False),
    sa.Column('teacher_id', sa.Integer(), nullable=False),
    sa.Column('task_date', sa.Date(), nullable=False),
    sa.Column('start_time', sa.DateTime(), nullable=True),
    sa.Column('end_time', sa.DateTime(), nullable=True),
    sa.Column('status', sa.Enum('pending', 'running', 'finished'), nullable=True),
    sa.Column('total_students', sa.Integer(), nullable=True),
    sa.Column('present_count', sa.Integer(), nullable=True),
    sa.Column('model_version', sa.String(length=50), nullable=True),
    sa.Column('created_at', sa.DateTime(), nullable=True),
    sa.ForeignKeyConstraint(['course_id'], ['courses.id'], ),
    sa.ForeignKeyConstraint(['teacher_id'], ['users.id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    with op.batch_alter_table('attendance_tasks', schema=None) as batch_op:
        batch_op.create_index(batch_op.f('ix_attendance_tasks_course_id'), ['course_id'], unique=False)
        batch_op.create_index(batch_op.f('ix_attendance_tasks_status'), ['status'], unique=False)
        batch_op.create_index(batch_op.f('ix_attendance_tasks_teacher_id'), ['teacher_id'], unique=False)

    op.create_table('face_images',
    sa.Column('id', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('student_id', sa.Integer(), nullable=False),
    sa.Column('file_path', sa.String(length=255), nullable=False),
    sa.Column('is_processed', sa.Boolean(), nullable=True),
    sa.Column('created_at', sa.DateTime(), nullable=True),
    sa.ForeignKeyConstraint(['student_id'], ['students.id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    with op.batch_alter_table('face_images', schema=None) as batch_op:
        batch_op.create_index(batch_op.f('ix_face_images_student_id'), ['student_id'], unique=False)

    op.create_table('student_courses',
    sa.Column('id', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('student_id', sa.Integer(), nullable=False),
    sa.Column('course_id', sa.Integer(), nullable=False),
    sa.Column('semester', sa.String(length=20), nullable=True),
    sa.ForeignKeyConstraint(['course_id'], ['courses.id'], ),
    sa.ForeignKeyConstraint(['student_id'], ['students.id'], ),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('student_id', 'course_id', 'semester', name='uk_enroll')
    )
    op.create_table('attendance_records',
    sa.Column('id', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('task_id', sa.Integer(), nullable=False),
    sa.Column('student_id', sa.Integer(), nullable=False),
    sa.Column('status', sa.Enum('present', 'absent', 'unverified'), nullable=False),
    sa.Column('confidence', sa.Float(), nullable=True),
    sa.Column('recognized_at', sa.DateTime(), nullable=True),
    sa.Column('verified_by', sa.Integer(), nullable=True),
    sa.Column('note', sa.String(length=200), nullable=True),
    sa.ForeignKeyConstraint(['student_id'], ['students.id'], ),
    sa.ForeignKeyConstraint(['task_id'], ['attendance_tasks.id'], ),
    sa.ForeignKeyConstraint(['verified_by'], ['users.id'], ),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('task_id', 'student_id', name='uk_task_student')
    )
    with op.batch_alter_table('attendance_records', schema=None) as batch_op:
        batch_op.create_index(batch_op.f('ix_attendance_records_status'), ['status'], unique=False)
        batch_op.create_index(batch_op.f('ix_attendance_records_student_id'), ['student_id'], unique=False)
        batch_op.create_index(batch_op.f('ix_attendance_records_task_id'), ['task_id'], unique=False)

    # ### end Alembic commands ###


def downgrade():
    # ### commands auto generated by Alembic - please adjust! ###
    with op.batch_alter_table('attendance_records', schema=None) as batch_op:
        batch_op.drop_index(batch_op.f('ix_attendance_records_task_id'))
        batch_op.drop_index(batch_op.f('ix_attendance_records_student_id'))
        batch_op.drop_index(batch_op.f('ix_attendance_records_status'))

    op.drop_table('attendance_records')
    op.drop_table('student_courses')
    with op.batch_alter_table('face_images', schema=None) as batch_op:
        batch_op.drop_index(batch_op.f('ix_face_images_student_id'))

    op.drop_table('face_images')
    with op.batch_alter_table('attendance_tasks', schema=None) as batch_op:
        batch_op.drop_index(batch_op.f('ix_attendance_tasks_teacher_id'))
        batch_op.drop_index(batch_op.f('ix_attendance_tasks_status'))
        batch_op.drop_index(batch_op.f('ix_attendance_tasks_course_id'))

    op.drop_table('attendance_tasks')
    with op.batch_alter_table('students', schema=None) as batch_op:
        batch_op.drop_index(batch_op.f('ix_students_class_name'))

    op.drop_table('students')
    with op.batch_alter_table('courses', schema=None) as batch_op:
        batch_op.drop_index(batch_op.f('ix_courses_teacher_id'))

    op.drop_table('courses')
    with op.batch_alter_table('users', schema=None) as batch_op:
        batch_op.drop_index(batch_op.f('ix_users_username'))

    op.drop_table('users')
    # ### end Alembic commands ###
